var searchData=
[
  ['s_20with_20docker_0',['Setting up Catena Service(s) with Docker',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html#autotoc_md15',1,'']]],
  ['satisfied_1',['satisfied',['../classcatena_1_1common_1_1RangeConstraint.html#a3eac7c6a90d9d83b0101b30793007f26',1,'catena::common::RangeConstraint::satisfied()'],['../classcatena_1_1common_1_1PicklistConstraint.html#a5cb59215391eedd6363d2c864b58e194',1,'catena::common::PicklistConstraint::satisfied()'],['../classcatena_1_1common_1_1NamedChoiceConstraint.html#ab1e9dafaea9c2de1b4423eb1adf4d2e3',1,'catena::common::NamedChoiceConstraint::satisfied()'],['../classcatena_1_1common_1_1IConstraint.html#a1632e09ef25e3ae15703b3d43f9c2e19',1,'catena::common::IConstraint::satisfied()']]],
  ['scopes_2',['Scopes',['../classcatena_1_1common_1_1Authorizer.html#ae9960a775fac6bc42d22559e2f764eda',1,'catena::common::Authorizer']]],
  ['scopes_5fe_3',['Scopes_e',['../namespacecatena_1_1common.html#a52e17ef3ce00a51e608afb060211e3a8',1,'catena::common']]],
  ['sdk_4',['sdk',['../index.html',1,'Catena C++ SDK'],['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html',1,'Using Docker With The Catena C++ SDK']]],
  ['segment_5',['Segment',['../classcatena_1_1common_1_1Path.html#a9e26c035ad5b8f72b56c9e55d140e170',1,'catena::common::Path']]],
  ['service_20s_20with_20docker_6',['Setting up Catena Service(s) with Docker',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html#autotoc_md15',1,'']]],
  ['service_5f_7',['service_',['../classCatenaServiceImpl_1_1MultiSetValue.html#aac4469ef683d5693dd0a54085a4ce391',1,'CatenaServiceImpl::MultiSetValue']]],
  ['servicecredentials_2eh_8',['ServiceCredentials.h',['../ServiceCredentials_8h.html',1,'']]],
  ['serviceimpl_2eh_9',['ServiceImpl.h',['../gRPC_2include_2ServiceImpl_8h.html',1,'']]],
  ['set_5fdefault_5fmax_5flength_10',['set_default_max_length',['../classcatena_1_1common_1_1Device.html#a322059e8a223311f6ccdef3230af50e2',1,'catena::common::Device']]],
  ['set_5fdefault_5ftotal_5flength_11',['set_default_total_length',['../classcatena_1_1common_1_1Device.html#a27002f3af198ed3c6faf7854696b0c9f',1,'catena::common::Device']]],
  ['setminimalset_12',['setMinimalSet',['../classcatena_1_1common_1_1ParamDescriptor.html#a3f592d84249581464ef366b9d5c63e85',1,'catena::common::ParamDescriptor']]],
  ['setoid_13',['setoid',['../classcatena_1_1common_1_1ParamDescriptor.html#a81457e74f713979e1335cf9ea89d2590',1,'catena::common::ParamDescriptor::setOid()'],['../classcatena_1_1common_1_1IParam.html#af88f70976495a6fc8cdad0369ce29aad',1,'catena::common::IParam::setOid()'],['../classcatena_1_1common_1_1ParamWithValue.html#a0d2d5a3967daccff82a534aada04fd97',1,'catena::common::ParamWithValue::setOid()']]],
  ['setting_20up_20and_20running_14',['Setting up and Running',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html#autotoc_md14',1,'']]],
  ['setting_20up_20catena_20service_20s_20with_20docker_15',['Setting up Catena Service(s) with Docker',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html#autotoc_md15',1,'']]],
  ['setvalue_16',['setvalue',['../classCatenaServiceImpl_1_1SetValue.html#acbe83430f6f115201155574620829cc7',1,'CatenaServiceImpl::SetValue::SetValue(CatenaServiceImpl *service, Device &amp;dm, bool ok)'],['../classCatenaServiceImpl_1_1SetValue.html#a4d6b76defd3974d32d72eb0005b1ff03',1,'CatenaServiceImpl::SetValue::SetValue(tcp::socket &amp;socket, SocketReader &amp;context, Device &amp;dm)'],['../classcatena_1_1common_1_1Device.html#ab74fd94275de7ec9676e9c7b28fbbed9',1,'catena::common::Device::setValue()'],['../classCatenaServiceImpl_1_1SetValue.html',1,'CatenaServiceImpl::SetValue']]],
  ['setvalue_2eh_17',['setvalue.h',['../gRPC_2include_2SetValue_8h.html',1,'(Global Namespace)'],['../REST_2include_2controllers_2SetValue_8h.html',1,'(Global Namespace)']]],
  ['sharedauthz_5f_18',['sharedAuthz_',['../classcatena_1_1common_1_1Connect.html#a156de209700b42ce94bfa322e16138e2',1,'catena::common::Connect']]],
  ['sharedflags_2eh_19',['SharedFlags.h',['../SharedFlags_8h.html',1,'']]],
  ['shouldsendparam_20',['shouldSendParam',['../classcatena_1_1common_1_1Device.html#a8bccd839e0caec654535c2dc0bfefabb',1,'catena::common::Device']]],
  ['shutdown_21',['shutdown',['../classcatena_1_1REST_1_1IServiceImpl.html#a5512130c27a22e3a4af228addee106b3',1,'catena::REST::IServiceImpl::Shutdown()'],['../classcatena_1_1REST_1_1CatenaServiceImpl.html#a1d6646abc4fa9880ddde88efdd27a972',1,'catena::REST::CatenaServiceImpl::Shutdown()']]],
  ['shutdownserver_22',['shutdownServer',['../classCatenaServiceImpl.html#aa20fbc7c7b095cf38712a04be8ac1bee',1,'CatenaServiceImpl']]],
  ['singleton_23',['singleton',['../classcatena_1_1patterns_1_1Singleton.html#ae2a6eca0412770b641759d2b7960c4e8',1,'catena::patterns::Singleton::Singleton(const Singleton &amp;)=delete'],['../classcatena_1_1patterns_1_1Singleton.html#a93935ffb59aa07556717760769adbe91',1,'catena::patterns::Singleton::Singleton(Singleton &amp;&amp;)=delete'],['../classcatena_1_1patterns_1_1Singleton.html#a3e19a6ea253df88afe0e36a98dece839',1,'catena::patterns::Singleton::Singleton()=default'],['../classcatena_1_1patterns_1_1Singleton.html',1,'catena::patterns::Singleton&lt; T &gt;']]],
  ['singleton_2eh_24',['Singleton.h',['../Singleton_8h.html',1,'']]],
  ['singleton_3c_20functory_3c_20k_2c_20r_2c_20ms_2e_2e_2e_20_3e_20_3e_25',['Singleton&lt; Functory&lt; K, R, Ms... &gt; &gt;',['../classcatena_1_1patterns_1_1Singleton.html',1,'catena::patterns']]],
  ['singleton_3c_20genericfactory_3c_20p_2c_20k_2c_20ms_2e_2e_2e_20_3e_20_3e_26',['Singleton&lt; GenericFactory&lt; P, K, Ms... &gt; &gt;',['../classcatena_1_1patterns_1_1Singleton.html',1,'catena::patterns']]],
  ['singleton_3c_20peermanager_20_3e_27',['Singleton&lt; PeerManager &gt;',['../classcatena_1_1patterns_1_1Singleton.html',1,'catena::patterns']]],
  ['size_28',['size',['../classcatena_1_1common_1_1IParam.html#a357881202bece2996171fae807517637',1,'catena::common::IParam::size()'],['../classcatena_1_1common_1_1ParamWithValue.html#aad918685bdc22bfb09674276e43b23da',1,'catena::common::ParamWithValue::size()'],['../classcatena_1_1common_1_1Path.html#ad2487342bef5315cb4413e25d95c8097',1,'catena::common::Path::size()']]],
  ['slot_29',['slot',['../classcatena_1_1common_1_1Device.html#a20bc93f8e38ca7ce122ba26efb8da8ce',1,'catena::common::Device::slot(const uint32_t slot)'],['../classcatena_1_1common_1_1Device.html#adae63c83dfa563977613dbf8440c45be',1,'catena::common::Device::slot() const']]],
  ['socket_5f_30',['socket_',['../classcatena_1_1REST_1_1SocketWriter.html#a9a3f4e9097d019c4e9e19a5b57b9efd7',1,'catena::REST::SocketWriter::socket_'],['../classCatenaServiceImpl_1_1MultiSetValue.html#a1fc3cc9d8b2545f08b781062193b5e87',1,'catena::REST::CatenaServiceImpl::MultiSetValue::socket_']]],
  ['socketreader_31',['SocketReader',['../classcatena_1_1REST_1_1SocketReader.html',1,'catena::REST']]],
  ['socketreader_2eh_32',['SocketReader.h',['../SocketReader_8h.html',1,'']]],
  ['socketwriter_33',['socketwriter',['../classcatena_1_1REST_1_1SocketWriter.html#a9c809c1c586d949c08126585f8e8858a',1,'catena::REST::SocketWriter::SocketWriter()'],['../classcatena_1_1REST_1_1ChunkedWriter.html#a9c809c1c586d949c08126585f8e8858a',1,'catena::REST::ChunkedWriter::SocketWriter()'],['../classcatena_1_1REST_1_1SocketWriter.html',1,'catena::REST::SocketWriter']]],
  ['socketwriter_2eh_34',['SocketWriter.h',['../SocketWriter_8h.html',1,'']]],
  ['split_35',['split',['../namespacecatena.html#a72711cdba4d85a76051ad05cd6c582fb',1,'catena']]],
  ['status_2eh_36',['Status.h',['../Status_8h.html',1,'']]],
  ['status_5f_37',['status_',['../classCatenaServiceImpl_1_1MultiSetValue.html#a25b29962f92cd77d0b1c726e5a7cd3b9',1,'CatenaServiceImpl::MultiSetValue']]],
  ['statuscode_38',['StatusCode',['../namespacecatena.html#a8883f03e942ef610b66860d5b52f8d85',1,'catena']]],
  ['steps_20to_20run_39',['Steps to run',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2docker-cpp.html#autotoc_md16',1,'']]],
  ['stream_5fif_5fpossible_40',['stream_if_possible',['../namespacecatena_1_1meta.html#a5c3dc782e536317ef49293910ba24bb2',1,'catena::meta']]],
  ['streamable_2eh_41',['Streamable.h',['../Streamable_8h.html',1,'']]],
  ['structinfo_42',['StructInfo',['../structcatena_1_1common_1_1StructInfo.html',1,'catena::common']]],
  ['structinfo_2eh_43',['StructInfo.h',['../StructInfo_8h.html',1,'']]],
  ['submodules_44',['Initialize git submodules',['../md__2home_2runner_2work_2Catena_2Catena_2sdks_2cpp_2docs_2linux__toolchain.html#autotoc_md28',1,'']]],
  ['subs_45',['subs',['../namespacecatena.html#a9034cc95074df53a45e81ee00fa754ad',1,'catena']]],
  ['subscriptionmanager_46',['subscriptionmanager',['../classcatena_1_1common_1_1SubscriptionManager.html',1,'catena::common::SubscriptionManager'],['../classcatena_1_1common_1_1SubscriptionManager.html#a9efb56ebfe6712d9b08b71f0ff57350b',1,'catena::common::SubscriptionManager::SubscriptionManager()']]],
  ['subscriptionmanager_2eh_47',['SubscriptionManager.h',['../SubscriptionManager_8h.html',1,'']]],
  ['subscriptionmanager_5f_48',['subscriptionManager_',['../classCatenaServiceImpl.html#a0b87d2d540b5bd08625c58b2964611ea',1,'CatenaServiceImpl']]],
  ['subscriptions_49',['subscriptions',['../classcatena_1_1common_1_1Device.html#a99d7cbc16f0a9c0aee97439e59acc2d1',1,'catena::common::Device']]]
];
